Renamed routes / Fixed routes
